--- a/page5.html
+++ b/page5.html
@@ -10,8 +10,9 @@
   <meta name="description" content="">
   
   
-  <title>SUBMIT YOUR PAPER</title>
+  <title>SUBMIT YOUR ABSTRACT</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -35,11 +36,11 @@
         <div class="container-fluid">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="index.html">
+                    <a href="page12.html">
                         <img src="assets/images/logo-vepcem-118x130.png" alt="Mobirise" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-7" href="index.html">V EPCEM</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-7" href="page12.html">V EPCEM</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -50,7 +51,7 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-primary display-7" href="page1.html"><span class="mobi-mbri mobi-mbri-users mbr-iconfont mbr-iconfont-btn" style="color: rgb(0, 0, 0);"></span>About Us</a></li></ul>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-primary display-7" href="index.html"><span class="mbrib-cust-feedback mbr-iconfont mbr-iconfont-btn" style="color: rgb(0, 0, 0);"></span>English<br></a></li><li class="nav-item"><a class="nav-link link text-primary display-7" href="page12.html"><span class="mbrib-cust-feedback mbr-iconfont mbr-iconfont-btn" style="color: rgb(0, 0, 0);"></span>Portuguese<br></a></li><li class="nav-item"><a class="nav-link link text-primary display-7" href="page1.html"><span class="mobi-mbri mobi-mbri-users mbr-iconfont mbr-iconfont-btn" style="color: rgb(0, 0, 0);"></span>About Us</a></li></ul>
                 
                 
             </div>
@@ -96,7 +97,7 @@
                         <div class="iconfont-wrapper">
                             <a href="assets/files/modeloresumo_ivepcem11.0f0c255cfa144bd8a7231.c7cc671579e248b1b151.doc" target="_blank"><span class="mbr-iconfont mobi-mbri-contact-form mobi-mbri"></span></a>
                         </div>
-                        <h5 class="card-title mbr-fonts-style display-7"><a href="assets/files/modeloresumo_ivepcem11.0f0c255cfa144bd8a7231.c7cc671579e248b1b151.doc" class="text-primary" target="_blank"><strong>Template download</strong></a></h5>
+                        <h5 class="card-title mbr-fonts-style display-7"><strong>Template download&nbsp;</strong></h5>
                         <p class="card-text mbr-fonts-style display-7">Click on the icon to download the template with instructions that you must follow to create your abstract.</p>
                     </div>
                 </div>
@@ -170,7 +171,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/p" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Web page was <a href="https://mobirise.site/g" style="color:#aaa;">started</a> with Mobirise</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/b" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site" style="color:#aaa;">Mobirise</a> web software</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
