--- a/page13.html
+++ b/page13.html
@@ -95,7 +95,7 @@
                 <div class="card-wrapper">
                     <div class="card-box align-center">
                         <div class="iconfont-wrapper">
-                            <a href="assets/files/modeloresumo_ivepcem11.0f0c255cfa144bd8a7231.c7cc671579e248b1b151.doc" target="_blank"><span class="mbr-iconfont mobi-mbri-contact-form mobi-mbri"></span></a>
+                            <a href="assets/files/Modelo_Resumo-VEPCEM.doc" target="_blank"><span class="mbr-iconfont mobi-mbri-contact-form mobi-mbri"></span></a>
                         </div>
                         <h5 class="card-title mbr-fonts-style display-7"><strong><a href="assets/files/Modelo_Resumo-VEPCEM.doc" class="text-primary" target="_blank"><b>Download&nbsp;do resumo modelo</b></a>&nbsp;</strong></h5>
                         <p class="card-text mbr-fonts-style display-7">Clique no ícone para baixar o modelo com as instruções que deve seguir para criar o seu resumo.</p>
@@ -171,7 +171,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/m" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Web page <a href="https://mobirise.site/f" style="color:#aaa;">was started</a> with Mobirise</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/i" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Web page was <a href="https://mobirise.site/g" style="color:#aaa;">made</a> with Mobirise</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
